feat: 🎉 readme added, some custom styling

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -5,5 +5,8 @@
   "baseFontSize": 16,
   "monospaceFontFamily": "Monoid",
   "interfaceFontFamily": "",
-  "translucency": false
+  "translucency": false,
+  "enabledCssSnippets": [
+    "snippets"
+  ]
 }
